Add built Tailwind CSS for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   <!-- Remix Icon CDN -->
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
+  <link rel="stylesheet" href="output.css">
+
 </head>
 
 <body>
