--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nikos Nikolaidis</title>
-  <link rel="stylesheet" href="/src/output.css" />
-  <link rel="stylesheet" href="/assets/style.css" />
+
+  <!-- Tailwind CSS -->
+  <link rel="stylesheet" href="output.css">
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="style.css">
 
   <!-- Remix Icon CDN -->
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
-  <link rel="stylesheet" href="output.css">
-
 </head>
+
 
 <body>
   <!-- ========== Header ========== -->
