--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nikos Nikolaidis</title>
-
-  <!-- Tailwind CSS -->
-  <link rel="stylesheet" href="output.css">
+ 
+   <!-- Tailwind -->
+  <link rel="stylesheet" href="src/output.css">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/style.css ">
 
   <!-- Remix Icon CDN -->
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
